--- a/style.css
+++ b/style.css
@@ -10,44 +10,72 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: orange;
+    background-color: #0f0f20;
 }
 .chatBot{
-    width: 400px;
-    height: 500px;
-    padding: 10px;
-    border: 2px solid black;
+    width: 350px;
+    height: 90vh;
+    border: 2px solid rgba(255, 255, 255, 0.5);
     border-radius: 10px;
     box-sizing: border-box;
-    box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3)
+    box-shadow: -5px -5px 15px rgb(250, 250, 247), 5px 5px 15px rgb(251, 251, 251)
 }
 .chatBot_Title{
-    width: 375px;
+    width: 350px;
     height: auto;
     text-align: center;
-    background-color: aqua;
-    /* position: fixed; */
+    color: #fff;
+    position: fixed;
+    padding: 20px 0px;
     box-sizing: border-box;
-    border-radius: 10px;
+    border-bottom: 1px solid#fff;
 }
-.dispalyChat{
+.displayChat{
     width: 100%;
-    height: auto;
-    /* margin-top: 10%; */
-    background-color: aquamarine;
+    height: 68vh;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    margin-top: 20%;
+    color: #000;
+    background-color: #fff;
 }
-.dispalyChat>ul{
+#display{
+    display: flex;
+    flex-direction: column;
+}
+#display>button{
+    width: 150px;
+    padding: 5px;
+    margin: 2px 10px;
+    cursor: pointer;
+    border: 1px solid #90c21a;
+    border-radius: 20px;
+    color: #fff;
+    background-color: #90c21a; 
+}
+#display>ul>li{
     margin-left: 20px;
-    overflow: hidden;
+    margin-right: 80px;
 }
-.dispalyChat>ul>li{
-    list-style: none;
+.right{
+    text-align: right;
+    padding: 5px;
+    margin: 10px 0px;
+    margin-left: 80px;
+    box-sizing: content-box;
+}
+.left{
+    text-align: left;
+    padding: 5px;
+    margin: 10px 0px;
+    margin-right: 80px;
+    box-sizing: content-box;
 }
 .inputMessage{
-    width: 375px;
+    width: 100%;
     height: auto;
-    /* position: fixed;
-    bottom: 10%; */
+    padding: 10px;
 }
 .inputMessage>input{
     width: 100%;
